Expose promotion info in DLRN API
We want to be able to retrieve promotion information using the
DLRN API, so we can gather statistics or use the latest promotion
of a specific CI as a starting point for another CI.

This commit adds a new api call /api/promotions, that gives us all
promotions with some filter options:

- By promotion name
- By commit/distro hash combination

A dlrnapi_client update is required to expose this functionality.
Note that this also changes the /api/promote call to return an
additional value (timestamp), which does not break previous clients.

Story: 204
Task: 495
